--- a/css/main.css
+++ b/css/main.css
@@ -334,3 +334,73 @@ About
     margin-bottom: 0;
   }
 }
+
+/* 
+===========================
+Services
+===========================
+*/
+.services-title {
+  text-align: center;
+}
+
+.service-card {
+  background: var(--clr-gray-10);
+  margin: 2rem 0;
+  border-radius: var(--radius);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  transition: var(--transition);
+}
+
+.service-card:hover {
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  transform: scale(1.02);
+}
+.service-img {
+  border-top-left-radius: var(--radius);
+  border-top-right-radius: var(--radius);
+  height: 17rem;
+  object-fit: cover;
+}
+
+.service-info {
+  text-align: center;
+  padding: 3rem 1rem 2.5rem 1rem;
+}
+
+.service-info p {
+  color: var(--clr-gray-5);
+  max-width: 20rem;
+  margin: 1rem auto;
+}
+
+@media screen and (min-width: 778px) {
+  .service-card {
+    float: right;
+    width: 45%;
+    margin-left: 5%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .service-card {
+    width: 30%;
+    margin-left: 3.33%;
+  }
+}
+
+.service-img-container {
+  position: relative;
+}
+
+.service-icon {
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  font-size: 1.75rem;
+  color: var(--clr-primary);
+  transform: translate(-50%, 50%);
+  background-color: var(--clr-primary-light);
+  padding: 0.5rem 0.7rem 0.1rem 0.7rem;
+  border-radius: 50%;
+  border: 0.375rem solid var(--clr-gray-10);
+}
