html code for contact us part created

--- a/css/main.css
+++ b/css/main.css
@@ -404,3 +404,8 @@ Services
   border-radius: 50%;
   border: 0.375rem solid var(--clr-gray-10);
 }
+/* 
+===========================
+Contact Us
+===========================
+*/
