animation for header and navbar created

--- a/css/main.css
+++ b/css/main.css
@@ -123,6 +123,44 @@ h4 {
 }
 /* 
 ===========================
+Animations
+===========================
+*/
+@keyframes bounce {
+  0%{
+    transform: scale(1);
+  }
+  50%{
+    transform: scale(2);
+  }
+  100%{
+    transform: scale(1);
+  }
+}
+
+@keyframes slidFromTop {
+  0%{
+    transform: translateY(-100px);
+    opacity: 0;
+  }
+  100%{
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slidFromBottom {
+  0%{
+    transform: translateY(100px);
+    opacity: 0;
+  }
+  100%{
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+/* 
+===========================
 Navbar
 ===========================
 */
@@ -134,6 +172,7 @@ Navbar
   right: 5%;
   z-index: 1;
   cursor: pointer;
+  animation: bounce 2.5s linear infinite;
 }
 
 .navbar {
@@ -220,11 +259,13 @@ Header
 .banner h1 {
   color: var(--clr-primary);
   margin-bottom: 2rem;
+  animation: slidFromTop 2s ease-in-out 1;
 }
 
 .banner h2 {
   color: var(--clr-white);
   margin-bottom: 3rem;
+  animation: slidFromBottom 2s ease-in-out 1;
 }
 
 .btn-banner {
@@ -232,6 +273,7 @@ Header
   outline: 0.125rem solid var(--clr-primary);
   outline-offset: 0.25rem;
   padding: 0.75rem 1.25rem;
+   animation: slidFromBottom 2s linear 1;
 }
 
 .content-divider {
